# photocard_market

./: README.md  docker-compose-dev.yaml  pyproject.toml  requirements.txt
infra/dev/app/: Dockerfile
infra/dev/nginx/: Dockerfile  nginx-app.conf  nginx.conf
infra/dev/uwsgi/: uwsgi.ini
photocard_market/account/: admin.py  managers.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
photocard_market/account/migrations/: 0001_initial.py
photocard_market/buy/: serializers.py  urls.py  views.py
photocard_market/config/: pagination.py  urls.py
photocard_market/config/settings/: base.py  dev.py
photocard_market/product/: models.py  serializers.py  urls.py  views.py
photocard_market/product/migrations/: 0002_remove_photocard_ea_photocard_description.py
photocard_market/sale/: admin.py  enums.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
photocard_market/sale/migrations/: 0001_initial.py  0002_remove_salehistory_ea_alter_salehistory_photo_card_and_more.py  0004_alter_salehistory_price_and_more.py
photocart_market/account/: admin.py  apps.py  managers.py  models.py  serializers.py  signals.py  views.py
photocart_market/account/migrations/: 0001_initial.py  0002_userwallet_and_more.py  (+1 more)
photocart_market/buy/: serializers.py  urls.py  views.py
photocart_market/config/: settings.py  urls.py
photocart_market/product/: admin.py  models.py  serializers.py  urls.py  views.py
photocart_market/register/: models.py
photocart_market/sale/: admin.py  enums.py  models.py  serializers.py  urls.py  views.py
(+10 files in other folders)
